[tool.poetry]
name = "userbot-for-sbh"
version = "0.1.0"
description = ""
authors = ["Oleg <63945818+OlegShir@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
